[project]
name = "app"
version = "0.2.1"
description = "A typed solution to quickly create websites"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD"}
dependencies = [
    "typed @ git+https://github.com/ximenesyuri/typed",
    "utils @ git+https://github.com/ximenesyuri/utils",
    "markdown",
    "pyyaml",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]           
