[project]
name = "comp"
version = "0.3.3"
description = "A functional typed component system for python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD"}
dependencies = [
    "typed @ git+https://github.com/ximenesyuri/typed",
    "beautifulsoup4",
    "markdown",
    "pyyaml",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["comp*"]           
