[project]
name = "comp"
version = "0.4.0"
description = "A functional typed component system for python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD"}
dependencies = [
    "typed @ git+https://github.com/ximenesyuri/typed",
    "beautifulsoup4",
    "markdown",
    "pyyaml",
    "jinja2"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["comp*"]           
